--- a/style.css
+++ b/style.css
@@ -74,24 +74,20 @@
 
 }
 .imagem-1{
-	width: 620px;
-	height: 820px;
+	width: 48%;
+	/*height: 820px;*/
 	margin: 0px 5px 0 10px;
 	 
 }
 .imagens{
+	width: 48%;
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
 }
-.imagens-item1{
-	width: 620px;
-	height: 400px;
-	margin: 0 10px 10px 10px;
-}
+.imagens-item1,
 .imagens-item2{
-	width: 620px;
-	height: 400px;
+	width:100%;
 	margin:10px 10px 0 10px;
 }
 .a-1{
@@ -133,4 +129,28 @@
 .span-2{
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
+}
+.containerContato{
+	display: flex;
+	background-color: rgba(170, 0, 0, 0.90);
+}
+.main_contact_endereco{
+	width: 100%;
+	height: 35vh;
+	display:flex;
+	top: 60px;
+	left: 100px;
+	color: white;
+	flex-wrap: wrap;
+	flex-direction: column;
+	background-color: rgba(170, 0, 0, 0.90);
+}
+.main_contact_formulario{
+	width: 100%;
+	height: 35vh;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	color: white;
+	background-color: rgba(170, 0, 0, 0.90);
 }
