--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 
 	/*		INDEX		*/
-
-
-
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 *{
 	margin: 0;
@@ -18,18 +15,21 @@
 	height: 60vh;
 }
 .header-logo{
-	width: 10%;
-	height: 18vh;
+	width: 12%;
+	height: 22vh;
 	position: absolute;
-	top: 110px;
-	left: 170px;
+	top: 60px;
+	left: 110px;
 }
 .menu{
 	font-size: 30px;
 	position: absolute;
 	top: 80px;
-	left: 950px;
+	left: 600px;
 	font-style: #000;
+	display: flex;
+	justify-content: space-around;
+	width: 47%
 }
 .menu-item{
 	background-color: rgba(255, 255, 255, 0.70);
@@ -39,12 +39,12 @@
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 	color: #000;
-
 }
 .centro{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	align-items: flex-end;
 	position: relative;
 }
 .quadrado{
@@ -76,27 +76,26 @@
 	width: 70%;
 	text-align: center;
 	margin: 80px 0 10px 0;
-
 }
 .imagem-maior{
 	width: 48%;
 	/*height: 820px;*/
-	margin: 0px 25px 0 0px;
-	 
+	margin: 0px 20px 0 0px;
 }
 .imagens-juntas{
 	width: 48%;
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	flex-direction: column;
+	/*justify-content: space-between;*/
 }
 .imagens-item1{
 	width: 100%;
-	margin: 0 0px 10px 0px;
+	margin: 0 0px 0px 0px;
 }
 .imagens-item2{
 	width:100%;
-	margin:10px 10px 0 0px;
+	margin-top:7.8%;
 }
 .mais-fotos2{
 	display: none;
@@ -109,6 +108,7 @@
 	margin: 40px 0 0 0;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-between;
 }
 .titulo-1{
 	color: #fff;
@@ -121,11 +121,13 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	align-items: flex-end;
+	align-items: flex-start;
 	width: 340px;
 	height: 200px;
-	position: absolute;
+/*	position: absolute;
 	right: 0;
+	bottom: -400px;*/
+	margin-top: 15px;
 }
 .redes-icon{
 
@@ -166,37 +168,44 @@
 
 
 
+.header-2{
+	background: rgb(92, 12, 28);
 
+}
 .containerContato{
 	display: flex;
-	background-color: rgba(170, 0, 0, 0.90);
+	background-color: rgb(92, 12, 28);
 	min-height: 35vh;
 }
-.main_contact_endereco{
-	width: 100%;
-	display:flex;
-	top: 60px;
-	left: 100px;
-	color: white;
-	flex-wrap: wrap;
-	flex-direction: column;
-	background-color: rgba(170, 0, 0, 0.90);
-}
-.main_contact_formulario{
-	width: 100%;
+.mainContato-item{
+	width: 50%;
 	display: flex;
-	flex-wrap: wrap;
 	flex-direction: column;
-	color: white;
-	background-color: rgba(170, 0, 0, 0.90);
+	justify-content: flex-start;
+	align-items: flex-start;
+	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+	}
+.form-titulo1{
+	margin-left: 110px;
+
+}.form-titulo2{
+
 }
-textarea{
+.form-input{
+	width: 90%;
+	height: 5vh;
+}
+.form-text{
 	height: 200px;
 }
+
 .rodape-1{
 	display: flex;
 	width: 100%;
 	justify-content: center;
+	background-color: rgb(92, 12, 28);
 }
 .powered-2{
 	font-family: 'Open Sans', sans-serif;
