--- a/style.css
+++ b/style.css
@@ -10,26 +10,35 @@
 }
 .header-1{
 	background: url("assets/ft-header.jpg") no-repeat center;
-	background-size: 100%;
+	background-size: cover;
 	width: 100%;
 	height: 60vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
 }
 .header-logo{
-	width: 12%;
-	height: 22vh;
-	position: absolute;
-	top: 60px;
-	left: 110px;
+	width: 15%;
+	/*height: 28vh;*/
+	margin: 5% 0 0 8%;
+}
+@media(max-width: 640px){
+	.header-logo{
+		width: 25%
+	}
+	.menu{
+		flex-direction: column;
+		font-size: 20px;
+	}
+	
 }
 .menu{
 	font-size: 30px;
-	position: absolute;
-	top: 80px;
-	left: 600px;
 	font-style: #000;
 	display: flex;
-	justify-content: space-around;
-	width: 47%
+	justify-content: flex-end;
+	align-items: flex-end;
+	margin: 70px 50px 0 0;
 }
 .menu-item{
 	background-color: rgba(255, 255, 255, 0.70);
@@ -39,6 +48,8 @@
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
 	color: #000;
+	height: 10%;
+	margin: 5px;
 }
 .centro{
 	display: flex;
@@ -65,6 +76,18 @@
 	color: #fff;
 	margin: 0 15px 10px 0;
 }
+@media(max-width: 640px){
+	.centro{
+		flex-direction: column;
+		flex-wrap: nowrap;
+		justify-content: center;
+		align-items: center;
+	}
+	.quadrado{
+		display: none;
+	}
+	
+}
 .span-reticencias{
 	font-size: 16px;
 }
@@ -89,6 +112,19 @@
 	flex-direction: column;
 	/*justify-content: space-between;*/
 }
+@media(max-width: 640px){
+	.centro{
+		justify-content: center;
+		align-items: center;
+	}
+	.imagem-maior{
+		width: 90%;
+		margin: 0;
+	}
+	.imagens-juntas{
+		width: 90%;
+	}
+}
 .imagens-item1{
 	width: 100%;
 	margin: 0 0px 0px 0px;
@@ -97,8 +133,30 @@
 	width:100%;
 	margin-top:7.8%;
 }
+@media(max-width: 640px){
+	.imagens-item1{
+		margin-top: 3%;
+	}
+	.imagens-item2{
+		margin: 0;
+		margin-top: 3%;
+	}
+}
 .mais-fotos2{
 	display: none;
+	align-self: flex-end;
+	margin-right: 6%;
+	margin-top: 1.3%;
+}
+@media(max-width: 640px){
+	.mais-fotos2{
+		display: block;
+		text-decoration: none;
+		font-size: 18px;
+		font-family: 'Open Sans', sans-serif;
+		font-weight: 700;
+		color: #fff;
+	}
 }
 .rodape{
 	background: url("fotos/foto02.jpg") no-repeat center -270px;
@@ -110,23 +168,13 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
-.titulo-1{
-	color: #fff;
-	width: 45%;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 700;
-	margin: 20px 0 0 30px;
-}
 .redes-sociais{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: flex-start;
 	width: 340px;
-	height: 200px;
-/*	position: absolute;
-	right: 0;
-	bottom: -400px;*/
+	height: 50%;
 	margin-top: 15px;
 }
 .redes-icon{
@@ -136,6 +184,13 @@
 	width: 60px;
 	height: 60px;
 	margin: 5px;
+}
+.titulo-1{
+	color: #fff;
+	width: 45%;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	margin: 20px 0 0 30px;
 }
 .container-final{
 	display: flex;
@@ -157,6 +212,22 @@
 .span-2{
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 700;
+}
+@media(max-width: 640px){
+	.rodape{
+		background: none;
+		justify-content: center;
+	}
+	.titulo-1{
+		width: 90%;
+		margin-bottom: 10%;
+	}
+	.container-final{
+		background: none;
+	}
+	.powered-1{
+		color: #fff;
+	}
 }
 
 
